scrollbar css and minor fixes

--- a/public/customui/windows-theme.css
+++ b/public/customui/windows-theme.css
@@ -146,6 +146,9 @@
 
 .winbox-body {
     padding: 8px;
+    display: flex;
+    width: 100%;
+    height:100%
 }
 
 .desktop-icon {
@@ -254,8 +257,8 @@
     background: #dfdfdf;
     margin-top: -2px;
     padding: 8px 14px;
-    height: 350px;
-    width: 100%;
+    height: 90%;
+    width: 90%;
     box-sizing: border-box;
 }
 
@@ -266,3 +269,28 @@
     margin: 8px 0;
     width: 50%;
 }
+
+/* Win95-style scrollbar */
+::-webkit-scrollbar {
+  width: 16px;
+  height: 16px;
+}
+
+::-webkit-scrollbar-track {
+  background: #c0c0c0;
+  border-left: 2px solid #808080;
+  border-top: 2px solid #808080;
+  border-right: 2px solid #ffffff;
+  border-bottom: 2px solid #ffffff;
+  box-shadow: inset -1px -1px 0 #fff;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #d4d0c8;
+  border-left: 2px solid #ffffff;
+  border-top: 2px solid #ffffff;
+  border-right: 2px solid #808080;
+  border-bottom: 2px solid #808080;
+  box-shadow: inset 1px 1px 0 #c0c0c0;
+}
+
